--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>DriveElite | Modern Intensive Driving Courses</title>
     <meta name="description"
         content="Fast-track your driving licence with our expert manual and automatic driving lessons. Beat the wait times.">
