add footer line

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2026 DriveElite. Not affiliated with Suja or PassMeFast. All rights reserved.</p>
+            <p>&copy; 2026 Easy Drive Driving School. Design and Developed by Kyle Infotech. All Rights Reserved.</p>
         </div>
     </footer>
 
